sdl_movie/error
tutorial02.c:179:22: warning: 'data' is deprecated [-Wdeprecated-declarations]
                pict.data[0] = yPlane;
                     ^
/usr/local/include/libavcodec/avcodec.h:3867:5: note: 'data' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:180:22: warning: 'data' is deprecated [-Wdeprecated-declarations]
                pict.data[1] = uPlane;
                     ^
/usr/local/include/libavcodec/avcodec.h:3867:5: note: 'data' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:181:22: warning: 'data' is deprecated [-Wdeprecated-declarations]
                pict.data[2] = vPlane;
                     ^
/usr/local/include/libavcodec/avcodec.h:3867:5: note: 'data' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:182:22: warning: 'linesize' is deprecated [-Wdeprecated-declarations]
                pict.linesize[0] = pCodecCtx->width;
                     ^
/usr/local/include/libavcodec/avcodec.h:3869:5: note: 'linesize' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:183:22: warning: 'linesize' is deprecated [-Wdeprecated-declarations]
                pict.linesize[1] = uvPitch;
                     ^
/usr/local/include/libavcodec/avcodec.h:3869:5: note: 'linesize' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:184:22: warning: 'linesize' is deprecated [-Wdeprecated-declarations]
                pict.linesize[2] = uvPitch;
                     ^
/usr/local/include/libavcodec/avcodec.h:3869:5: note: 'linesize' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:188:70: warning: 'data' is deprecated [-Wdeprecated-declarations]
                        pFrame->linesize, 0, pCodecCtx->height, pict.data,
                                                                     ^
/usr/local/include/libavcodec/avcodec.h:3867:5: note: 'data' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:189:30: warning: 'linesize' is deprecated [-Wdeprecated-declarations]
                        pict.linesize);
                             ^
/usr/local/include/libavcodec/avcodec.h:3869:5: note: 'linesize' has been explicitly marked deprecated here
    attribute_deprecated
    ^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
tutorial02.c:191:39: error: use of undeclared identifier 'tex'
                SDL_UpdateYUVTexture(*tex, NULL, pFrame->data[0], pFrame->linesize[0],
                                      ^
tutorial02.c:214:9: warning: 'av_free_packet' is deprecated [-Wdeprecated-declarations]
        av_free_packet(&packet);
        ^
/usr/local/include/libavcodec/avcodec.h:4472:1: note: 'av_free_packet' has been explicitly marked deprecated here
attribute_deprecated
^
/usr/local/include/libavutil/attributes.h:94:49: note: expanded from macro 'attribute_deprecated'
#    define attribute_deprecated __attribute__((deprecated))
                                                ^
9 warnings and 1 error generated.
